--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,10 @@ nav p {
     font-size: 100%;
 }
 
+h2, h3 {
+    margin-bottom: 20px;
+}
+
 .float-left {
     float: left;
     margin-right: 25px;
