--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,8 @@ body {
 header {
     padding: 20px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
-    color: #ffffff;
+    background-color: darkblue;
+    color: white;
 }
 
 header h1 {
@@ -33,8 +33,8 @@ header nav ul {
 }
 
 header nav ul li {
-    display: inline-block;
-    margin-left: 25px;
+    display: inline;
+    margin-left: 5px;
 }
 
 a {
@@ -60,11 +60,6 @@ h2, h3 {
     margin-bottom: 20px;
 }
 
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
 main {
     margin-bottom: 20px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -73,15 +68,28 @@ main {
 .AboutMe {
     padding: 20px;
     margin-bottom: 20px;
-    border-radius: 5px;
-    border: dashed;
+}
+
+.AboutMe img, .AboutMe p {
+    display: inline-flex;
+    width: 49%;
+    vertical-align: middle;
+    gap: 20px;
+}
+
+.AboutMe img {
+    height: 500px;
+    width: 50%;
+    padding-bottom: 20px;
+}
+
+.AboutMe p {
+    padding-left: 20px;
 }
 
 .Work {
     padding: 20px;
     margin-bottom: 20px;
-    border-radius: 5px;
-    border: dashed;
 }
 
 .projectgroup1, .projectgroup2 {
@@ -90,22 +98,32 @@ main {
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 20px;
-    justify-content: space-around;
     gap: 20px;
+}
+
+.projectgroup1 img, .projectgroup2 img {
+    width: 100%;
+    height: 75%;
 }
 
 .project1, .project2, .project3, .project4, .project5 {
     border-radius: 5px;
-    border: dashed;
+    border: solid;
 }
 
 .project2, .project3, .project4, .project5 {
-    background: greenyellow;
+    background: lightgrey;
 }
 
 .project1 {
     padding-left: 20px;
     padding-right: 20px;
+}
+
+.project1 img {
+    width: 100%;
+    height: 100%;
+    padding-bottom: 20px;
 }
 
 .projectgroup2 {
@@ -115,8 +133,6 @@ main {
 .resume {
     padding: 20px;
     margin-bottom: 20px;
-    border: dashed;
-    border-radius: 5px;
 }
 
 .resume p {
@@ -126,10 +142,8 @@ main {
 footer {
     padding: 20px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
-    color: #ffffff;
-    border: dashed;
-    border-radius: 5px;
+    background-color: darkblue;
+    color: white;
 }
 
  footer h2 {
@@ -152,8 +166,4 @@ footer nav ul li {
     display: inline-block;
     margin-left: 25px;
     color: white;
-}
-
-@media screen and (max-width: 1000px) {
-    
 }
